<resources>
    <string name="app_name">AndroidTesis</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrate">Registrate</string>
    <string name="pass_hint">Clave</string>
    <string name="user_hint">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="rep_clave">Rep Clave</string>
    <string name="volver">Volver</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_inicio">Inicio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detalles_paquete">DetallesPaqueteActivity</string>
    <string name="error_max_habitaciones">Maximo 3 habitaciones</string>
</resources>
